force-app/main/default/objects/Record_Creation_History__c/Record_Creation_History__c.object-meta.xml
<CustomObject>
    <label>Record Creation History</label>
    <nameField>
        <displayFormat>RCH-{0}</displayFormat>
        <label>Record Creation History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Creation Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>