force-app/main/default/objects/Record_Creation_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Record Creation Histories</relationshipLabel>
    <relationshipName>Record_Creation_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>