force-app/main/default/objects/Record_Creation_History__c/fields/Record_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Record_Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Record Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Record_Creation_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>