force-app/main/default/objects/Record_Creation_History__c/fields/Record_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Record_Created_Date__c</fullName>
    <label>Record Created Date</label>
    <type>DateTime</type>
</CustomField>